[gd_scene load_steps=27 format=2]

[ext_resource path="res://scenes/card/large_card_view.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/clickable_control.gd" type="Script" id=2]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/playing_scene/combat/combat_overlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/playing_scene/playing_scene.gd" type="Script" id=5]
[ext_resource path="res://scenes/playing_scene/combat/combat_power_balance.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/playing_scene/ui/rival_hand_area.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/playing_scene/ui/my_hand_area.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/playing_scene/card_list.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/settings scene.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.498039 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.247059 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.247059 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.247059 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=9]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=10]
Label/fonts/font = SubResource( 9 )

[sub_resource type="DynamicFont" id=15]
size = 40
outline_size = 1
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="Gradient" id=17]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.752941, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=18]
gradient = SubResource( 17 )
fill_to = Vector2( 0, 1 )

[sub_resource type="Gradient" id=19]
offsets = PoolRealArray( 0, 0.5, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.752941, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=20]
gradient = SubResource( 19 )
fill_to = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=21]
size = 80
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=22]
size = 140
outline_size = 5
font_data = ExtResource( 3 )

[node name="PlayingScene" type="Node"]
script = ExtResource( 5 )

[node name="UILayer" type="CanvasLayer" parent="."]
layer = -1

[node name="MyField" type="Node" parent="UILayer"]

[node name="Stack" type="Panel" parent="UILayer/MyField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 480.0
margin_top = 136.0
margin_right = 624.0
margin_bottom = 352.0
rect_pivot_offset = Vector2( 72, 108 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="HandArea" parent="UILayer/MyField" instance=ExtResource( 8 )]
margin_left = -400.0
margin_top = 112.0
margin_right = 400.0
margin_bottom = 352.0
custom_styles/panel = SubResource( 2 )
timer_path = NodePath("../../../Timer")

[node name="Playing" type="ReferenceRect" parent="UILayer/MyField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 72.0
margin_top = -108.0
margin_right = 216.0
margin_bottom = 108.0

[node name="Played" type="Panel" parent="UILayer/MyField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 266.0
margin_top = -80.0
margin_right = 410.0
margin_bottom = 136.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 72, 108 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
timer_path = NodePath("../../../Timer")

[node name="Discard" type="Panel" parent="UILayer/MyField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 480.0
margin_top = -96.0
margin_right = 624.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 72, 108 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="RivalField" type="Node" parent="UILayer"]

[node name="Stack" type="Panel" parent="UILayer/RivalField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -624.0
margin_top = -352.0
margin_right = -480.0
margin_bottom = -136.0
rect_pivot_offset = Vector2( 72, 108 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="HandArea" parent="UILayer/RivalField" instance=ExtResource( 7 )]
margin_left = -400.0
margin_top = -352.0
margin_right = 400.0
margin_bottom = -112.0
custom_styles/panel = SubResource( 3 )
timer_path = NodePath("../../../Timer")

[node name="Playing" type="ReferenceRect" parent="UILayer/RivalField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -108.0
margin_right = -72.0
margin_bottom = 108.0

[node name="Played" type="Panel" parent="UILayer/RivalField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -136.0
margin_right = -266.0
margin_bottom = 80.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 72, 108 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
timer_path = NodePath("../../../Timer")

[node name="Discard" type="Panel" parent="UILayer/RivalField"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -624.0
margin_top = -120.0
margin_right = -480.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 72, 108 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="BGLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="PowerBalance" parent="BGLayer" instance=ExtResource( 6 )]
visible = false
margin_top = 128.0
margin_bottom = -128.0

[node name="MyNextBuf" type="Label" parent="BGLayer"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 232.0
margin_top = -96.0
margin_right = 448.0
margin_bottom = -48.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
valign = 1

[node name="RivalNextBuf" type="Label" parent="BGLayer"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = 48.0
margin_right = -232.0
margin_bottom = 96.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
align = 2
valign = 1

[node name="CardLayer" type="CanvasLayer" parent="."]

[node name="EffectLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="TopUILayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Control" type="Control" parent="TopUILayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 10 )

[node name="MyStackCount" type="Label" parent="TopUILayer/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -64.0
margin_right = -16.0
margin_bottom = -4.0
text = "23"
align = 1
valign = 1
max_lines_visible = 1

[node name="MyLife" type="Label" parent="TopUILayer/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -232.0
margin_right = -16.0
margin_bottom = -172.0
text = "27"
align = 1
valign = 1
max_lines_visible = 1

[node name="MyDamage" type="Label" parent="TopUILayer/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -632.0
margin_top = -312.0
margin_right = -568.0
margin_bottom = -248.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "3"
align = 1
valign = 1
max_lines_visible = 1

[node name="RivalDamage" type="Label" parent="TopUILayer/Control"]
margin_left = 568.0
margin_top = 248.0
margin_right = 632.0
margin_bottom = 312.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "3"
align = 1
valign = 1
max_lines_visible = 1

[node name="RivalLife" type="Label" parent="TopUILayer/Control"]
margin_left = 16.0
margin_top = 168.0
margin_right = 160.0
margin_bottom = 228.0
text = "27"
align = 1
valign = 1
max_lines_visible = 1

[node name="RivalStackCount" type="Label" parent="TopUILayer/Control"]
margin_left = 16.0
margin_right = 160.0
margin_bottom = 60.0
text = "23"
align = 1
valign = 1
max_lines_visible = 1

[node name="SettingButton" type="Button" parent="TopUILayer/Control"]
margin_left = 1160.0
margin_top = 16.0
margin_right = 1264.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 16 )
text = "Setting"

[node name="ResultOverlap" type="Control" parent="TopUILayer"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="RivalVeil" type="TextureRect" parent="TopUILayer/ResultOverlap"]
anchor_right = 1.0
margin_bottom = 192.0
mouse_filter = 2
texture = SubResource( 18 )
expand = true

[node name="MyVeil" type="TextureRect" parent="TopUILayer/ResultOverlap"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -192.0
mouse_filter = 2
texture = SubResource( 20 )
expand = true

[node name="ReturnButton" type="Button" parent="TopUILayer/ResultOverlap"]
margin_left = 240.0
margin_top = 576.0
margin_right = 1040.0
margin_bottom = 701.0
custom_fonts/font = SubResource( 21 )
text = "Return Title"

[node name="ResultLabel" type="Label" parent="TopUILayer/ResultOverlap"]
margin_left = 256.0
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 240.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 22 )
text = "Win"
align = 1
valign = 1

[node name="CombatLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="CombatOverlay" parent="CombatLayer" instance=ExtResource( 4 )]
visible = false

[node name="ListLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="CardList" parent="ListLayer" instance=ExtResource( 9 )]
unique_name_in_owner = true
visible = false

[node name="OverlayLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="LargeCardView" parent="OverlayLayer" instance=ExtResource( 1 )]
unique_name_in_owner = true
visible = false

[node name="SettingsScene" parent="OverlayLayer" instance=ExtResource( 10 )]
unique_name_in_owner = true
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="clicked" from="UILayer/MyField/Stack" to="." method="_on_MyStack_clicked"]
[connection signal="clicked_card" from="UILayer/MyField/HandArea" to="." method="_on_MyHandArea_clicked_card"]
[connection signal="decided_card" from="UILayer/MyField/HandArea" to="." method="_on_MyHandArea_decided_card"]
[connection signal="held_card" from="UILayer/MyField/HandArea" to="." method="_on_MyHandArea_held_card"]
[connection signal="clicked" from="UILayer/MyField/Played" to="." method="_on_MyPlayed_clicked"]
[connection signal="held" from="UILayer/MyField/Played" to="." method="_on_MyPlayed_held"]
[connection signal="clicked" from="UILayer/MyField/Discard" to="." method="_on_MyDiscard_clicked"]
[connection signal="clicked" from="UILayer/RivalField/Stack" to="." method="_on_RivalStack_clicked"]
[connection signal="clicked_card" from="UILayer/RivalField/HandArea" to="." method="_on_RivalHandArea_clicked_card"]
[connection signal="held_card" from="UILayer/RivalField/HandArea" to="." method="_on_RivalHandArea_held_card"]
[connection signal="clicked" from="UILayer/RivalField/Played" to="." method="_on_RivalPlayed_clicked"]
[connection signal="held" from="UILayer/RivalField/Played" to="." method="_on_RivalPlayed_held"]
[connection signal="clicked" from="UILayer/RivalField/Discard" to="." method="_on_RivalDiscard_clicked"]
[connection signal="pressed" from="TopUILayer/Control/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="TopUILayer/ResultOverlap/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed_surrender" from="OverlayLayer/SettingsScene" to="." method="_on_SettingsScene_pressed_surrender"]
